[gd_scene load_steps=2 format=3 uid="uid://da0ufcolsh826"]

[ext_resource type="Script" uid="uid://bgntfai4pjja4" path="res://scripts/menu/login/creation_box.gd" id="1_flwuq"]

[node name="CreationBox" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -116.0
offset_right = 210.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flwuq")

[node name="CreationBox" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="Margin" type="MarginContainer" parent="CreationBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBox" type="VBoxContainer" parent="CreationBox/Margin"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="LoginLabel" type="Label" parent="CreationBox/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Create account"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmailEdit" type="LineEdit" parent="CreationBox/Margin/VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Email"
context_menu_enabled = false

[node name="UsernameEdit" type="LineEdit" parent="CreationBox/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Username"
context_menu_enabled = false

[node name="PasswordEdit" type="LineEdit" parent="CreationBox/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Password"
context_menu_enabled = false
secret = true

[node name="PasswordEdit2" type="LineEdit" parent="CreationBox/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Password, again"
context_menu_enabled = false
secret = true

[node name="CreationButton" type="Button" parent="CreationBox/Margin/VBox"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Create"

[node name="ErrorLabel" type="Label" parent="CreationBox/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoBackButton" type="Button" parent="CreationBox"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 41.0
text = "‚Üê"

[connection signal="text_submitted" from="CreationBox/Margin/VBox/PasswordEdit2" to="." method="_on_password_submitted"]
[connection signal="pressed" from="CreationBox/Margin/VBox/CreationButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CreationBox/GoBackButton" to="." method="_on_go_back_pressed"]
